--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -2,13 +2,13 @@
 
 ---
 
-<nav class="w-full h-20 bg-text-secondary sticky top-0 z-50">
+<nav class="w-full h-20 bg-text-secondary fixed top-0 z-50">
     <div class="h-full w-5/6 max-w-5xl py-4 mx-auto flex items-center justify-between lg:relative">
         <img class="h-full w-auto z-50" src="/imgs/logo.png" alt="logo">
         <ul id="menu" class="fixed top-20 lg:top-0 left-0 m-auto lg:m-0 w-full lg:w-fit lg:h-full flex flex-col lg:flex-row justify-center lg:items-center text-center gap-4 bg-text/50 lg:bg-transparent text-2xl font-gotham-bold font-bold -translate-y-[150%] lg:translate-0 duration-300 z-40">
             <li class="w-full h-auto"><a class="w-full lg:w-max h-auto block py-2 px-4 hover:bg-surface lg:hover:bg-transparent hover:text-text-secondary lg:hover:text-alert transition-all duration-300" href="/">Inicio</a></li>
-            <li class="w-full h-auto"><a class="w-full lg:w-max h-auto block py-2 px-4 hover:bg-surface lg:hover:bg-transparent hover:text-text-secondary lg:hover:text-alert transition-all duration-300" href="/services">Servicios</a></li>
-            <li class="w-full h-auto"><a class="w-full lg:w-max h-auto block py-2 px-4 hover:bg-surface lg:hover:bg-transparent text-surface hover:text-text-secondary lg:hover:text-alert transition-all duration-300" href="/about">Quiénes somos</a></li>
+            <li class="w-full h-auto"><a class="w-full lg:w-max h-auto block py-2 px-4 hover:bg-surface lg:hover:bg-transparent hover:text-text-secondary lg:hover:text-alert transition-all duration-300" href="#services">Servicios</a></li>
+            <li class="w-full h-auto"><a class="w-full lg:w-max h-auto block py-2 px-4 hover:bg-surface lg:hover:bg-transparent text-surface hover:text-text-secondary lg:hover:text-alert transition-all duration-300" href="#about">Quiénes somos</a></li>
         </ul>
         <div class="grid grid-cols-1 grid-rows-1 lg:hidden z-50">
             <svg id="openBtn" width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-menu col-start-1 col-end-2 row-start-1 row-end-2 h-full w-auto duration-300 scale-100"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 8l16 0" /><path d="M4 16l16 0" /></svg>
@@ -20,7 +20,7 @@
 <style>
     #menu {
         height: calc(100vh - 5rem);
-        backdrop-filter: blur(5px);
+        backdrop-filter: blur(8px);
     }
 
     svg {
@@ -44,10 +44,13 @@
     const openBtn = document.getElementById('openBtn')
     const closeBtn = document.getElementById('closeBtn')
     const menuItems = document.querySelectorAll('#menu li a')
+    const hero = document.querySelector('nav')
 
     const openMenu = () => {
-        menu?.classList.remove('-translate-y-[150%]')
-        menu?.classList.add('translate-y-0')
+        if (menu){
+            menu.classList.remove('-translate-y-[150%]')
+            menu.classList.add('translate-y-0')
+        }
         openBtn?.classList.remove('scale-100')
         openBtn?.classList.add('scale-0')
         closeBtn?.classList.remove('scale-0')
@@ -66,4 +69,21 @@
     openBtn?.addEventListener('click', openMenu)
     closeBtn?.addEventListener('click', closeMenu)
     menuItems.forEach(item => item.addEventListener('click', closeMenu))
+
+    const observer = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+            if (entry.isIntersecting && hero) {
+                hero.classList.remove('bg-text-secondary')
+                hero.classList.add('bg-text-secondary/50')
+                hero.style.backdropFilter = 'blur(8px)'
+
+            }
+        })
+    }, { threshold: 0.8 })
+
+    if(hero) {
+        observer.observe(hero)
+    }
+
+    
 </script>
