--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 
 import Footer from '../components/Footer.astro';
 import Hero from '../components/Hero.astro';
-import Info from '../components/Info.astro';
+import Contact from '../components/Contact.astro';
 import NavBar from '../components/NavBar.astro';
 import Services from '../components/Services.astro';
 import Layout from '../layouts/Layout.astro';
@@ -14,7 +14,7 @@ import "../styles/global.css";
 	<main class="relative w-full min-h-dvh">
 		<Hero />
 		<Services />
-		<Info />
+		<Contact />
 		<Footer />
 	</main>
 </Layout>
