Meta data added

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,6 +5,8 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<title>Proyecto Final</title>
+		<meta property="og:description" content="Desarrollador Web - Help Desk" />
+		<meta property="og:image" content="https://final-project-308.pages.dev/imgs/avatar.png" />
 	</head>
 	<body>
 		<slot />
