Setting local fonts

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,4 +23,28 @@
 	html {
 		scroll-behavior: smooth;
 	}
+
+	@font-face {
+		font-family: 'gotham_bold';
+		font-style: normal;
+		font-weight: 700;
+		font-display: swap;
+		src: url("/fonts/gotham_bold.woff") format("woff");
+	}
+
+	@font-face {
+		font-family: 'gotham';
+		font-style: normal;
+		font-weight: 300;
+		font-display: swap;
+		src: url("/fonts/gotham.woff") format("woff");
+	}
+
+	@font-face {
+		font-family: 'rudolphin';
+		font-style: normal;
+		font-weight: 400;
+		font-display: swap;
+		src: url("/fonts/rudolphin.woff") format("woff");
+	}
 </style>
