--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,7 +8,7 @@
   --color-text-secondary: #b0e6eb;
   --color-surface: #111927;
   --color-alert: #ff5c5c;
-  --font-rudolphin: "Rudolphin", serif;
-  --font-gotham: "Gotham", sans-serif;
-  --font-gotham-bold: "Gotham Bold", sans-serif;
+  --font-rudolphin: "rudolphin", serif;
+  --font-gotham: "gotham", sans-serif;
+  --font-gotham-bold: "gotham bold", sans-serif;
 }
