--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -2,10 +2,10 @@
 import Card from './Card.astro';
 ---
 
-<section id="services" class="w-full min-h-screen flex relative top-0">
+<section id="services" class="w-full min-h-screen h-full flex relative top-0 py-10">
     <video muted autoplay loop src="/videos/section1.webm" class="w-full h-full absolute object-cover object-center z-0"></video>
     <div class="overlay absolute inset-0 bg-text/50 z-10"></div>
-    <div class="h-full w-[90%] max-w-5xl mx-auto md:m-auto flex flex-col justify-center items-center relative top-20 md:inset-0 md:self-center md:place-self-center md:justify-self-center gap-8 py-10 z-20">
+    <div class="h-full w-[90%] max-w-5xl mx-auto md:m-auto flex flex-col justify-center items-center relative top-20 md:inset-0 md:self-center md:place-self-center md:justify-self-center gap-8 z-20">
         <h2 class="text-surface text-6xl font-bold font-rudolphin">Servicios</h2>
         <div class="w-full flex flex-col md:flex-row md:flex-wrap justify-center lg:justify-between items-center gap-6">
             <Card href="#" src="/imgs/card2.avif" alt="Estructura de proyectos web" title="Estructura Web" />
