About section done

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -10,7 +10,7 @@
             <h1 class="text-primary font-rudolphin text-7xl lg:text-9xl font-bold mb-6 mt-2">Iván<br>Alvear</h1>
             <a
             class="group relative inline-block overflow-hidden border border-primary px-8 py-3 focus:ring-3 focus:outline-hidden"
-            href="#contact"
+            href="#about"
             >
                 <span
                     class="absolute inset-x-0 top-0 h-[2px] bg-primary transition-all group-hover:h-full"
@@ -23,12 +23,16 @@
                 </span>
             </a>
         </div>
-        <img src="/imgs/avatar.png" alt="avatar" class="w-4/5 md:w-3/5 max-w-120 h-auto mx-auto">
+        <img src="/imgs/avatar.png" alt="avatar" class="hero-pic w-4/5 md:w-3/5 max-w-120 h-auto mx-auto">
     </div>
 </header>
 
 <style>
     header {
         height: calc(100vh);
+    }
+
+    .hero-pic {
+        mask-image: linear-gradient(black 85%, transparent);
     }
 </style>
