Footer section added

--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -9,19 +9,19 @@ import Card from './Card.astro';
         <h2 class="text-surface text-6xl font-bold font-rudolphin">Servicios</h2>
         <div class="w-full flex flex-col md:flex-row md:flex-wrap justify-center lg:justify-between items-center gap-6">
             <Card 
-            href="#" 
+            href="#services" 
             src="/imgs/card2.avif" 
             alt="Estructura de proyectos web" 
             title="Estructura Web"
             />
             <Card 
-            href="#" 
+            href="#services" 
             src="/imgs/card3.avif" 
             alt="SEO" 
             title="SEO"
             />
             <Card 
-            href="#" 
+            href="#services" 
             src="/imgs/card1.avif" 
             alt="Web Development" 
             title="Desarrollo Web" 
