Loading local font fixed

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -6,7 +6,7 @@
         <div class="bg-shape1 w-40 h-40 md:w-72 md:h-72 relative rounded-full animate-[one_10s_infinite] bg-primary opacity-60 bg-blur"></div>
     </div>
     <div class="relative w-[90%] max-w-5xl mx-auto h-full min-h-screen flex flex-col items-center justify-center inset-0 z-10">
-        <h2 class="font-rudolphin text-5xl text-surface text-center">¿Quién soy?</h2>
+        <h2 class="font-[rudolphin] text-5xl text-surface text-center">¿Quién soy?</h2>
         <p class="w-full max-w-96 text-surface text-lg font-[gotham] font-light mt-4 mx-auto text-left">
             Me llamo <strong class="font-[rudolphin] text-secondary text-2xl">Iván Alvear</strong>,<br>
             Soy <strong class="font-[rudolphin] text-secondary text-2xl">Desarrollador Web</strong> con experiencia en la creación de aplicaciones web modernas y eficientes.
