--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -13,7 +13,7 @@ const { href, src, alt, title } = Astro.props;
     <img class="w-full h-full absolute object-cover object-center opacity-100 duration-300"
     src={ src }
     alt={ alt } />
-    <h2 class="flex items-center justify-center absolute bottom-0 h-10 w-full py-1 bg-text-secondary/60 text-surface text-3xl font-gotham-bold transition-all duration-300">{ title }</h2>
+    <h2 class="flex items-center justify-center absolute bottom-0 h-10 w-full py-1 bg-text-secondary/60 text-surface text-3xl font-[gotham] transition-all duration-300">{ title }</h2>
 </a>
 
 <style>
