--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 <footer class="bg-text-secondary text-surface w-full h-10 bottom-0 relative z-20">
     <div class="footer-content w-full max-w-5xl mx-auto flex items-center justify-center h-full">
-        <p class="text-surface text-center text-base md:text-xl">Hecha con ❤️ por <strong class="text-alert">Alpes</strong> - &copy; 2025</p>
+        <p class="text-surface text-center text-base md:text-xl font-[gotham]">Hecha con ❤️ por <strong class="text-alert">Alpes</strong> - &copy; 2025</p>
     </div>
 </footer>
