--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,8 +6,8 @@
     <div class="absolute inset-0 bg-surface/50 z-10"></div>
     <div class="h-full w-5/6 max-w-5xl mx-auto flex flex-col-reverse md:flex-row justify-center lg:justify-between items-center gap-6 z-20 relative">
         <div class="h-auto mx-auto flex flex-col justify-center md:items-start items-center text-center md:text-left relative">
-            <h2 class="text-text font-gotham text-3xl font-normal">Hola, soy</h2>
-            <h1 class="text-primary font-rudolphin text-7xl lg:text-9xl font-bold mb-6 mt-2">Iván<br>Alvear</h1>
+            <h2 class="text-text font-[gotham] text-3xl font-normal">Hola, soy</h2>
+            <h1 class="text-primary font-[rudolphin] text-7xl lg:text-9xl font-bold mb-6 mt-2">Iván<br>Alvear</h1>
             <a
             class="group relative inline-block overflow-hidden border border-primary px-8 py-3 focus:ring-3 focus:outline-hidden"
             href="#about"
@@ -17,7 +17,7 @@
                 ></span>
 
                 <span
-                    class="relative text-sm font-gotham text-primary transition-colors group-hover:text-surface font-bold"
+                    class="relative text-sm font-[gotham] text-primary transition-colors group-hover:text-surface font-bold"
                 >
                     Contáctame
                 </span>
