--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -2,7 +2,7 @@
     <div class="h-full w-5/6 max-w-5xl py-4 mx-auto flex items-center justify-between lg:relative">
         <img class="h-full w-auto z-50" src="/imgs/logo.png" alt="logo">
         
-        <ul id="menu" class="fixed top-20 lg:top-0 left-0 m-auto lg:m-0 w-full lg:w-fit flex flex-col lg:flex-row justify-center lg:items-center text-center gap-4 text-2xl font-gotham-bold font-bold -translate-y-[150%] lg:translate-y-0 duration-300 backdrop-blur-[5px] bg-[#e8f7f9]/50 lg:bg-transparent z-40">
+        <ul id="menu" class="fixed top-20 lg:top-0 left-0 m-auto lg:m-0 w-full lg:w-fit flex flex-col lg:flex-row justify-center lg:items-center text-center gap-4 text-2xl font-[gotham] font-bold -translate-y-[150%] lg:translate-y-0 duration-300 backdrop-blur-[5px] bg-[#e8f7f9]/50 lg:bg-transparent z-40">
             <li class="w-full h-auto"><a class="w-full lg:w-max h-auto block py-2 px-4 hover:bg-surface lg:hover:bg-transparent hover:text-text-secondary lg:hover:text-alert transition-all duration-300" href="#">Inicio</a></li>
             <li class="w-full h-auto"><a class="w-full lg:w-max h-auto block py-2 px-4 hover:bg-surface lg:hover:bg-transparent hover:text-text-secondary lg:hover:text-alert transition-all duration-300" href="#services">Servicios</a></li>
             <li class="w-full h-auto"><a class="w-full lg:w-max h-auto block py-2 px-4 hover:bg-surface lg:hover:bg-transparent text-surface hover:text-text-secondary lg:hover:text-alert transition-all duration-300" href="#about">Quiénes somos</a></li>
